--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', subject: @subject %>
 
-<%= link_to 'Back', subjects_path %>
+<%= link_to 'Back', subjects_path %> |
+<%= link_to 'Teachers', teachers_path %> |
+<%= link_to 'Home', root_path %>
