--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', subject: @subject %>
 
-<%= link_to 'Show', @subject %> |
-<%= link_to 'Back', subjects_path %>
+<%= link_to 'Home', root_url %> |
+<%= link_to 'Back', subjects_path %> |
+<%= link_to 'Teachers', teachers_path %>
