--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', teacher: @teacher %>
 
-<%= link_to 'Show', @teacher %> |
-<%= link_to 'Back', teachers_path %>
+<%= link_to 'Home', root_url %> |
+<%= link_to 'Back', teachers_path %> |
+<%= link_to 'Subjects', subjects_path %>
