--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -16,7 +16,6 @@
       <tr>
         <td><%= teacher.name %></td>
         <td><%= teacher.surname %></td>
-        <td><%= link_to 'Show', teacher %></td>
         <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
         <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -26,4 +25,6 @@
 
 <br>
 
-<%= link_to 'New Teacher', new_teacher_path %>
+<%= link_to 'New Teacher', new_teacher_path %> |
+<%= link_to 'Subjects', subjects_path %> |
+<%= link_to 'Home', root_path %>
