--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -3,3 +3,5 @@
 <%= render 'form', teacher: @teacher %>
 
 <%= link_to 'Back', teachers_path %>
+<%= link_to 'Home', root_path %>
+<%= link_to 'Subjects', subjects_path %>
