--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -4,4 +4,5 @@
 
 <%= link_to 'Back', subjects_path %> |
 <%= link_to 'Teachers', teachers_path %> |
+<%= link_to 'Subjects', subjects_path %> |
 <%= link_to 'Home', root_path %>
