--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,8 +1,5 @@
 <h1>New Subject</h1>
 
-<%= render 'form', subject: @subject %>
-
-<%= link_to 'Back', subjects_path %> |
-<%= link_to 'Teachers', teachers_path %> |
-<%= link_to 'Subjects', subjects_path %> |
-<%= link_to 'Home', root_path %>
+<div class="content">
+    <%= render 'form', subject: @subject %>
+</div>
