--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -5,10 +5,11 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  font-family: 'Roboto', sans-serif;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
@@ -21,15 +22,6 @@ pre {
 
 a {
   color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
 }
 
 th {
@@ -81,4 +73,25 @@ div {
 
 label {
   display: block;
+}
+
+h1 {
+  padding-top: 2em;
+  padding-bottom: 1em;
+  text-align: center;
+}
+
+.small-input {
+  width: 300px; //!important;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
 }
