--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -2,27 +2,29 @@
 
 <h1>Subjects</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @subjects.each do |subject| %>
+<div class="content">
+  <table>
+    <thead>
       <tr>
-        <td><%= subject.name %></td>
-        <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
-        <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @subjects.each do |subject| %>
+        <tr>
+          <td><%= subject.name %></td>
+          <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
+          <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
-<%= link_to 'New Subject', new_subject_path %> |
-<%= link_to 'Teachers', teachers_path %> |
-<%= link_to 'Home', root_path %>
+<div class="footer">
+  <%= link_to 'New Subject', new_subject_path, class: 'btn btn-primary' %>
+</div>
