--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,30 +1,32 @@
 <p id="notice"><%= notice %></p>
+  <h1>Teachers</h1>
 
-<h1>Teachers</h1>
+  <div class="content">
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Surname</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Surname</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <tbody>
+        <% @teachers.each do |teacher| %>
+          <tr>
+            <td><%= teacher.name %></td>
+            <td><%= teacher.surname %></td>
+            <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
+            <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>  
+  </div>
+  
+  <br>
 
-  <tbody>
-    <% @teachers.each do |teacher| %>
-      <tr>
-        <td><%= teacher.name %></td>
-        <td><%= teacher.surname %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="footer">
+    <%= link_to 'New Teacher', new_teacher_path, class: 'btn btn-primary' %>
+  </div>
 
-<br>
-
-<%= link_to 'New Teacher', new_teacher_path %> |
-<%= link_to 'Subjects', subjects_path %> |
-<%= link_to 'Home', root_path %>
