--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -1,7 +1,5 @@
 <h1>New Teacher</h1>
 
-<%= render 'form', teacher: @teacher %>
-
-<%= link_to 'Back', teachers_path %>
-<%= link_to 'Home', root_path %>
-<%= link_to 'Subjects', subjects_path %>
+<div class="content">
+    <%= render 'form', teacher: @teacher %>
+</div>
