left input search and some bugs

--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag('calendars') %>
 <% if @calendar.nil? %>
   <%= link_to 'create list', 'javascript:void(0)', id: 'create-list' %>
 <% elsif @day.nil? %>
@@ -19,14 +20,17 @@
         <li>
           <div id="<%= day.id %>" >
             <%= select_tag 'subject-name',
-                           options_for_select(@subjects.collect{ |u| [u.name, u.id] }),
-                           id: 'subject-name-collection', selected: day.subjects_id %>
+                           options_for_select(@subjects.collect{ |u| [u.name, u.id] },
+                                              selected: day.subjects_id),
+                           id: 'subject-name-collection' %>
             <%= select_tag 'teacher-name',
-                           options_for_select(@teachers.collect{ |u| [u.name, u.id] }),
-                           id: 'teacher-name-collection', selected: day.teachers_id %>
+                           options_for_select(@teachers.collect{ |u| [u.name, u.id] },
+                                              selected: day.teachers_id),
+                           id: 'teacher-name-collection'%>
             <%= select_tag 'teacher-surname',
-                           options_for_select(@teachers.collect{ |u| [u.surname, u.id] }),
-                           id: 'teacher-surname-collection', selected: day.teachers_id %>
+                           options_for_select(@teachers.collect{ |u| [u.surname, u.id] },
+                                              selected: day.teachers_id),
+                           id: 'teacher-surname-collection'%>
           </div>
         </li>
         <br>
