--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,35 +1,24 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-image: linear-gradient(90deg, #FCA5F1 , #B5FFFF);
+  color: white;  
   margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  line-height: 18px;
+  line-height: 18px;  
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 pre {
-  background-color: #eee;
   padding: 10px;
   font-size: 11px;
 }
 
 a {
   color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
 }
 
 th {
@@ -79,6 +68,24 @@ div {
   }
 }
 
+h1 {
+  padding-top: 2em;
+  padding-bottom: 1em;
+  text-align: center;
+}
+
 label {
   display: block;
 }
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
