--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,16 +1,14 @@
 <%= javascript_include_tag('calendars') %>
 <% if @calendar.nil? %>
-  <%= link_to 'create list', 'javascript:void(0)', id: 'create-list' %>
+  <%= link_to 'Create list', 'javascript:void(0)', id: 'create-list', class: 'btn btn-dark' %>
 <% elsif @day.nil? %>
   <div class="subjects-container" id="<%= @calendar.id %>">
     <h1>List is empty</h1>
-    <ol id="subjects-list">
-
-    </ol>
+    <ol id="subjects-list"></ol>
     <br>
-    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-primary submit-btn',
+    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-warning submit-btn',
                 id: 'edit-list' %> |
-    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
+    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
                 id: 'calendar-delete-btn' %>
   </div>
 <% else %>
@@ -37,9 +35,9 @@
         <br>
       <% end %>
     </ol>
-    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-primary submit-btn',
-                id: 'edit-list' %> |
-    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
+    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-warning submit-btn',
+                id: 'edit-list' %>
+    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
                 id: 'calendar-delete-btn' %>
   </div>
 <% end %>
