--- a/app/views/calendars/_day.html.erb
+++ b/app/views/calendars/_day.html.erb
@@ -16,7 +16,7 @@
                            options_for_select(@teachers.collect{ |u| [u.surname, u.id] },
                                               selected: day.teachers_id),
                            id: 'teacher-surname-collection'%> |
-            <%= link_to 'save item', 'javascript:void(0)', id: 'save-item-edit' %> |
+            <%= link_to 'save item', 'javascript:void(0)', id: 'save-item-edit' %>
             <%= link_to 'delete item', 'javascript:void(0)', id: 'delete-item' %>
           </div>
         </li>
@@ -24,6 +24,6 @@
       <% end %>
     <% end %>
   </ol>
-  <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
+  <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-dark submit-btn',
               id: 'calendar-delete-btn'%>
 </div>
