--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -10,18 +10,20 @@
 </div>
 
 <h1>New Calendar</h1>
-
-<li><%= link_to 'Add subject','javascript:void(0);',id: 'subject-add'  %></li>
+<div class="content">
+  <%= link_to 'Add subject','javascript:void(0);',id: 'subject-add', class: 'btn btn-dark' %>
+</div>
 <div class="subjects-container" id="<%= @calendar.id %>">
-  <ol id="subjects-list">
-
-  </ol>
+  <ol id="subjects-list"></ol>
 </div>
 <br>
-<%= link_to 'Save list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
-            id: 'calendar-send-btn' %>
-<%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
-            id: 'calendar-delete-btn'%>
-<br>
 
-<%= link_to 'Back', calendars_path %>
+<div class="footer">
+  <%= link_to 'Save list', 'javascript:void(0);', class: 'btn btn-success submit-btn',
+              id: 'calendar-send-btn' %>
+  <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
+              id: 'calendar-delete-btn'%>
+  <%= link_to 'Back', calendars_path, class: 'btn btn-outline-dark'%>
+</div>
+
+<br>
