--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -2,29 +2,31 @@
 
 <h1>Teachers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Surname</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @teachers.each do |teacher| %>
+<div class="content">
+  <table>
+    <thead>
       <tr>
-        <td><%= teacher.name %></td>
-        <td><%= teacher.surname %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Surname</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @teachers.each do |teacher| %>
+        <tr>
+          <td><%= teacher.name %></td>
+          <td><%= teacher.surname %></td>
+          <td><%= link_to 'Edit', edit_teacher_path(teacher), class: 'btn btn-warning btn-sm' %></td>
+          <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
-<%= link_to 'New Teacher', new_teacher_path %> |
-<%= link_to 'Subjects', subjects_path %> |
-<%= link_to 'Home', root_path %>
+<div class="footer">
+  <%= link_to 'New Teacher', new_teacher_path, class: 'btn btn-dark' %>
+</div>
