--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,16 +1,14 @@
 <%= javascript_include_tag('calendars') %>
 <% if @calendar.nil? %>
-  <%= link_to 'create list', 'javascript:void(0)', id: 'create-list' %>
+  <%= link_to 'Create list', 'javascript:void(0)', id: 'create-list', class: 'btn btn-dark' %>
 <% elsif @day.nil? %>
   <div class="subjects-container" id="<%= @calendar.id %>">
     <h1>List is empty</h1>
-    <ol id="subjects-list">
-
-    </ol>
+    <ol id="subjects-list"></ol>
     <br>
-    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-primary submit-btn',
+    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-warning submit-btn',
                 id: 'edit-list' %> |
-    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
+    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
                 id: 'calendar-delete-btn' %>
   </div>
 <% else %>
@@ -19,27 +17,17 @@
       <% @day.each do |day|%>
         <li>
           <div id="<%= day.id %>" >
-            <%= select_tag 'subject-name',
-                           options_for_select(@subjects.collect{ |u| [u.name, u.id] },
-                                              selected: day.subjects_id),
-                           id: 'subject-name-collection' %>
-            <%= select_tag 'teacher-name',
-                           options_for_select(@teachers.collect{ |u| [u.name, u.id] },
-                                              selected: day.teachers_id),
-                           id: 'teacher-name-collection'%>
-            <%= select_tag 'teacher-surname',
-                           options_for_select(@teachers.collect{ |u| [u.surname, u.id] },
-                                              selected: day.teachers_id),
-                           id: 'teacher-surname-collection'%>
+            <input data-autocomplete-source="/subjects" type="text" disabled value="<%= @subjects.find_by(id: day.subjects_id).name%>" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
+            <input data-autocomplete-source="/teachers" type="text" disabled value="<%= @teachers.find_by(id: day.teachers_id).surname %> <%=@teachers.find_by(id: day.teachers_id).name%>"name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
           </div>
         </li>
         <br>
         <br>
       <% end %>
     </ol>
-    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-primary submit-btn',
-                id: 'edit-list' %> |
-    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-primary submit-btn',
+    <%= link_to 'Edit list', edit_calendar_path(@calendar.id), class: 'btn btn-warning submit-btn',
+                id: 'edit-list' %>
+    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
                 id: 'calendar-delete-btn' %>
   </div>
 <% end %>
