--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,16 +1,4 @@
-<div id="hidden-information", style="display: none">
-  <%= select_tag 'subject-name',
-                 options_for_select(@subjects.collect{ |u| [u.name, u.id] }) %>
-  <%= select_tag 'teacher-name',
-                 options_for_select(@teachers.collect{ |u| [u.name, u.id] }) %>
-  <%= select_tag 'teacher-surname',
-                 options_for_select(@teachers.collect{ |u| [u.surname, u.id] }) %>
-
-  <%= link_to 'delete item', 'javascript:void(0)', id: 'delete-item' %>
-</div>
-
 <h1>New Calendar</h1>
-
 <li><%= link_to 'Add subject','javascript:void(0);',id: 'subject-add'  %></li>
 <div class="subjects-container" id="<%= @calendar.id %>">
   <ol id="subjects-list">
@@ -25,3 +13,11 @@
 <br>
 
 <%= link_to 'Back', calendars_path %>
+
+
+
+<div id="hidden-information", style="display: none">
+  <input data-autocomplete-source="/subjects" type="text" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
+  <input data-autocomplete-source="/teachers" type="text" name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
+  <%= link_to 'delete item', 'javascript:void(0)', id: 'delete-item' %>
+</div>
