--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit 'Create Teatcher', class: 'btn btn-dark' %>
-    <%= link_to 'Back', :back, class: 'btn btn-outline-dark' %>
+    <%= form.submit 'Create Teatcher', class: 'btn btn-success' %>
+    <%= link_to 'Back', :back, class: 'btn btn-secondary' %>
   </div>
 <% end %>
