--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -28,5 +28,5 @@
 <br>
 
 <div class="footer">
-  <%= link_to 'New Teacher', new_teacher_path, class: 'btn btn-dark' %>
+  <%= link_to 'New Teacher', new_teacher_path, class: 'btn btn-success' %>
 </div>
