--- a/app/views/calendars/_day.html.erb
+++ b/app/views/calendars/_day.html.erb
@@ -1,29 +1,33 @@
-<div class="subjects-container" id="<%= @calendar.id %>">
-  <ol id="subjects-list">
-    <% unless @day.nil? %>
-      <% @day.each do |day|%>
-        <li>
-          <div id="<%= day.id %>" >
-            <%= select_tag 'subject-name',
-                           options_for_select(@subjects.collect{ |u| [u.name, u.id] },
-                                              selected: day.subjects_id),
-                           id: 'subject-name-collection'%>
-            <%= select_tag 'teacher-name',
-                           options_for_select(@teachers.collect{ |u| [u.name, u.id] },
-                                              selected: day.teachers_id),
-                           id: 'teacher-name-collection'%>
-            <%= select_tag 'teacher-surname',
-                           options_for_select(@teachers.collect{ |u| [u.surname, u.id] },
-                                              selected: day.teachers_id),
-                           id: 'teacher-surname-collection'%> |
-            <%= link_to 'save item', 'javascript:void(0)', id: 'save-item-edit' %>
-            <%= link_to 'delete item', 'javascript:void(0)', id: 'delete-item' %>
-          </div>
-        </li>
-        <br>
+<div class="content">
+  <div class="subjects-container" id="<%= @calendar.id %>">
+    <ol id="subjects-list">
+      <% unless @day.nil? %>
+        <% @day.each do |day|%>
+          <li>
+            <div id="<%= day.id %>" >
+              <%= select_tag 'subject-name',
+                            options_for_select(@subjects.collect{ |u| [u.name, u.id] },
+                                                selected: day.subjects_id),
+                            id: 'subject-name-collection', class: 'dropdown-item'%>
+              <%= select_tag 'teacher-name',
+                            options_for_select(@teachers.collect{ |u| [u.name, u.id] },
+                                                selected: day.teachers_id),
+                            id: 'teacher-name-collection', class: 'dropdown-item'%>
+              <%= select_tag 'teacher-surname',
+                            options_for_select(@teachers.collect{ |u| [u.surname, u.id] },
+                                                selected: day.teachers_id),
+                            id: 'teacher-surname-collection', class: 'dropdown-item'%>
+              <%= link_to 'Save item', 'javascript:void(0)', id: 'save-item-edit', class: 'btn btn-success btn-sm' %>
+              <%= link_to 'Delete item', 'javascript:void(0)', id: 'delete-item', class: 'btn btn-danger btn-sm' %>
+            </div>
+          </li>
+          <br>
+        <% end %>
       <% end %>
-    <% end %>
-  </ol>
-  <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-dark submit-btn',
+    </ol>
+  </div>
+</div>
+<div class="footer">
+  <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
               id: 'calendar-delete-btn'%>
 </div>
