--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -12,7 +12,7 @@
     </div>
    </div>
   <div class="footer">
-      <%= link_to 'Create subject', new_subject_path, class: 'btn btn-dark' %>
-      <%= link_to 'Add teacher', new_teacher_path, class: 'btn btn-dark' %>
+      <%= link_to 'Add subject', new_subject_path, class: 'btn btn-success' %>
+      <%= link_to 'Add teacher', new_teacher_path, class: 'btn btn-success' %>
   </div>
 </div>
