--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,19 +1,19 @@
 <div id="hidden-information", style="display: none">
   <%= select_tag 'subject-name',
-                 options_for_select(@subjects.collect{ |u| [u.name, u.id] }) %>
+                 options_for_select(@subjects.collect{ |u| [u.name, u.id] }), class: 'dropdown-item' %>
   <%= select_tag 'teacher-name',
-                 options_for_select(@teachers.collect{ |u| [u.name, u.id] }) %>
+                 options_for_select(@teachers.collect{ |u| [u.name, u.id] }), class: 'dropdown-item' %>
   <%= select_tag 'teacher-surname',
-                 options_for_select(@teachers.collect{ |u| [u.surname, u.id] }) %>
+                 options_for_select(@teachers.collect{ |u| [u.surname, u.id] }), class: 'dropdown-item' %>
 
-  <%= link_to 'delete item', 'javascript:void(0)', id: 'delete-item' %>
+  <%= link_to 'Delete item', 'javascript:void(0)', id: 'delete-item', class: 'btn btn-outline-danger btn-sm' %>
 </div>
 
 <h1>New Calendar</h1>
 <div class="content">
-  <%= link_to 'Add subject','javascript:void(0);',id: 'subject-add', class: 'btn btn-dark' %>
+  <%= link_to 'Add subject','javascript:void(0);',id: 'subject-add', class: 'btn btn-success' %>
 </div>
-<div class="subjects-container" id="<%= @calendar.id %>">
+<div class="subjects-container content" id="<%= @calendar.id %>">
   <ol id="subjects-list"></ol>
 </div>
 <br>
@@ -23,7 +23,7 @@
               id: 'calendar-send-btn' %>
   <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
               id: 'calendar-delete-btn'%>
-  <%= link_to 'Back', calendars_path, class: 'btn btn-outline-dark'%>
+  <%= link_to 'Back', calendars_path, class: 'btn btn-secondary'%>
 </div>
 
 <br>
