--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -26,5 +26,5 @@
 <br>
 
 <div class="footer">
-  <%= link_to 'New Subject', new_subject_path, class: 'btn btn-dark' %>
+  <%= link_to 'New Subject', new_subject_path, class: 'btn btn-success' %>
 </div>
