--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -84,6 +84,14 @@ label {
   align-items: center;
 }
 
+.help-container {
+  margin-top: 15px;
+  margin-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer {
   display: flex;
   justify-content: center;
