--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,5 +1,5 @@
 <% if @calendar.nil? %>
-  <%= link_to 'Create list', 'javascript:void(0)', id: 'create-list', class: 'btn btn-dark' %>
+  <%= link_to 'Create list', 'javascript:void(0)', id: 'create-list', class: 'btn btn-success' %>
 <% elsif @day.nil? %>
   <div class="subjects-container" id="<%= @calendar.id %>">
     <h1>List is empty</h1>
@@ -24,10 +24,12 @@
         <br>
       <% end %>
     </ol>
-    <%= link_to 'Edit list', edit_calendar_path(@calendar.id),  data: { turbolinks: false },  class: 'btn btn-warning submit-btn',
-                id: 'edit-list' %>
-    <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
-                id: 'calendar-delete-btn' %>
+    <div style="margin-left: 30px">
+      <%= link_to 'Edit list', edit_calendar_path(@calendar.id),  data: { turbolinks: false },  class: 'btn btn-warning submit-btn',
+                  id: 'edit-list' %>
+      <%= link_to 'Delete list', 'javascript:void(0);', class: 'btn btn-danger submit-btn',
+                  id: 'calendar-delete-btn' %>
+    </div>
   </div>
 <% end %>
 </div>
